[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/pauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets-MNR/Notalot35Regular-8DeD.ttf.ttf" type="DynamicFontData" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.341176 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.341176 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.341176 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.341176 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.647059 )

[sub_resource type="Theme" id=6]
Button/styles/disabled = SubResource( 1 )
Button/styles/focus = SubResource( 2 )
Button/styles/hover = SubResource( 3 )
Button/styles/normal = SubResource( 4 )
Button/styles/pressed = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 2 )

[node name="pauseMenu" type="CanvasLayer"]
pause_mode = 2
visible = false
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.215686 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.5
margin_top = -34.0
margin_right = 49.5
margin_bottom = 34.0
theme = SubResource( 6 )

[node name="ResumeButton" type="Button" parent="controls"]
margin_right = 99.0
margin_bottom = 11.0
custom_colors/font_color_focus = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_hover = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 7 )
text = "Resume"

[node name="MenuButton" type="Button" parent="controls"]
margin_top = 15.0
margin_right = 99.0
margin_bottom = 26.0
custom_colors/font_color_focus = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_hover = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "Back to Menu"

[node name="ExitButton" type="Button" parent="controls"]
margin_top = 30.0
margin_right = 99.0
margin_bottom = 41.0
custom_colors/font_color_focus = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_hover = Color( 0.478431, 0.913725, 0.313726, 1 )
custom_colors/font_color_pressed = Color( 0.117647, 0.52549, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Exit Game"

[connection signal="pressed" from="controls/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="controls/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="controls/ExitButton" to="." method="_on_ExitButton_pressed"]
